fix: modal positioning on iPhone 5 portrait

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -33,6 +33,10 @@
   max-width: 340px;
   min-height: 120px;
 
+  @media screen and (max-width: $screen-xs) {
+    min-width: 280px;
+  }
+
   & span {
     text-transform: uppercase;
   }
