--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  min-width: 360px;
+  min-width: 320px;
   min-height: 100%;
 
   scroll-behavior: smooth;
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  min-width: 360px;
+  min-width: 320px;
   min-height: 100%;
   margin: 0;
 
